--- a/python-basico-exs.ipynb
+++ b/python-basico-exs.ipynb
@@ -13,7 +13,7 @@
    "id": "74fc5570",
    "metadata": {},
    "source": [
-    "Função que retorna o maior valor entre a e b"
+    "##Função que retorna o maior valor entre a e b"
    ]
   },
   {
