--- a/python-basico-exs.ipynb
+++ b/python-basico-exs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b1b644b7",
+   "id": "e4392336",
    "metadata": {},
    "source": [
     "# Exercícios Python Básico - Letícia Schmidt"
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74fc5570",
+   "id": "47605cd7",
    "metadata": {},
    "source": [
-    "Função que retorna o maior valor entre a e b"
+    "Função que retorna o maior valor entre a e b:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8e076c29",
+   "id": "ad26962b",
    "metadata": {},
    "outputs": [
     {
@@ -46,9 +46,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4981d27c",
+   "metadata": {},
+   "source": [
+    "Função que retorna o somatório dos valores passados pela lista, além de somar neste resultado o valor de x (variável opcional):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "22ba78dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite o valor de x: 1\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 3\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 2\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 1\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 1\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 0\n",
+      "Soma: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def soma(lista, x = 0):\n",
+    "    lista = []\n",
+    "    total = 0\n",
+    "\n",
+    "    num = 1\n",
+    "    while num != 0:\n",
+    "        num = int(input('Digite os numeros da lista, caso finalizado digite 0: '))\n",
+    "        lista.append(num)\n",
+    "    \n",
+    "    tamanhoLista = len(lista)\n",
+    "    for i in range(tamanhoLista):\n",
+    "        total = total + lista[i]\n",
+    "    \n",
+    "    total = total + x\n",
+    "\n",
+    "    return total\n",
+    "\n",
+    "\n",
+    "listaVazia = []\n",
+    "valorX = int(input('Digite o valor de x: '))\n",
+    "\n",
+    "print(\"Soma:\", soma(listaVazia, valorX))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f43d9dab",
+   "metadata": {},
+   "source": [
+    "Função que retorna a média dos valores passados pela lista:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ca73177b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite os numeros da lista, caso finalizado digite 0: 2\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 4\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 5\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 6\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 3\n",
+      "Digite os numeros da lista, caso finalizado digite 0: 0\n",
+      "Media: 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def media(lista):\n",
+    "    lista = []\n",
+    "    somaNumeros = 0\n",
+    "    \n",
+    "    num = 1\n",
+    "    while num != 0:\n",
+    "        num = int(input('Digite os numeros da lista, caso finalizado digite 0: '))\n",
+    "        lista.append(num)\n",
+    "\n",
+    "    lista.pop()\n",
+    "    tamanhoLista = len(lista)\n",
+    "    for i in range(tamanhoLista):\n",
+    "        somaNumeros = somaNumeros + lista[i]\n",
+    "    \n",
+    "    media = somaNumeros/tamanhoLista\n",
+    "\n",
+    "    return media\n",
+    "\n",
+    "listaInput= []\n",
+    "\n",
+    "print(\"Media:\", media(listaInput))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f2bcb1a",
+   "metadata": {},
+   "source": [
+    "Função que retorna uma lista contendo os valores iguais entre as duas listas passadas como parâmetro:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "eabc8e5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite os elementos da lista1, caso finalizado digite 0: 123\n",
+      "Digite os elementos da lista1, caso finalizado digite 0: python\n",
+      "Digite os elementos da lista1, caso finalizado digite 0: uva\n",
+      "Digite os elementos da lista1, caso finalizado digite 0: 4\n",
+      "Digite os elementos da lista1, caso finalizado digite 0: 0\n",
+      "Digite os elementos da lista2, caso finalizado digite 0: python\n",
+      "Digite os elementos da lista2, caso finalizado digite 0: 4\n",
+      "Digite os elementos da lista2, caso finalizado digite 0: 0\n",
+      "Valores iguais: ['python', '4']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def valores_iguais(lista1, lista2):\n",
+    "    lista1 = []\n",
+    "    lista2 = []\n",
+    "    listaTotal = []\n",
+    "    aux1 = 1\n",
+    "    aux2 = 1\n",
+    "    while aux1 != '0':\n",
+    "        aux1 = input('Digite os elementos da lista1, caso finalizado digite 0: ')\n",
+    "        lista1.append(aux1)\n",
+    "        \n",
+    "    lista1.pop()\n",
+    "\n",
+    "    while aux2 != '0':\n",
+    "        aux2 = input('Digite os elementos da lista2, caso finalizado digite 0: ')\n",
+    "        lista2.append(aux2)\n",
+    "    lista2.pop()\n",
+    "\n",
+    "    tamanhoLista1 = len(lista1)\n",
+    "    tamanhoLista2 = len(lista2)\n",
+    "\n",
+    "    for i in range(tamanhoLista1):\n",
+    "        lista1[i]\n",
+    "        for j in range(tamanhoLista2):\n",
+    "            if lista1[i] == lista2[j]:\n",
+    "                listaTotal.append(lista1[i])\n",
+    "            \n",
+    "           \n",
+    "    return listaTotal\n",
+    "    \n",
+    "listaInput1 = []\n",
+    "listaInput2 = []\n",
+    "print(\"Valores iguais:\", valores_iguais(listaInput1,listaInput2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb37ef55",
+   "metadata": {},
+   "source": [
+    "Função que retorna a posição da primeira lista do primeiro valor igual ao da segunda lista.Caso não encontrar, retorna-se None:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f3768ca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite os elementos da lista1, caso finalizado digite 0: 987\n",
+      "Digite os elementos da lista1, caso finalizado digite 0: 2\n",
+      "Digite os elementos da lista1, caso finalizado digite 0: terra\n",
+      "Digite os elementos da lista1, caso finalizado digite 0: 0\n",
+      "Digite os elementos da lista2, caso finalizado digite 0: mar\n",
+      "Digite os elementos da lista2, caso finalizado digite 0: 1000\n",
+      "Digite os elementos da lista2, caso finalizado digite 0: 2\n",
+      "Digite os elementos da lista2, caso finalizado digite 0: ar\n",
+      "Digite os elementos da lista2, caso finalizado digite 0: 0\n",
+      "Indice do primeiro valor igual: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def indice_prim_valor_igual(lista1, lista2):\n",
+    "    lista1 = []\n",
+    "    lista2 = []\n",
+    "    aux1 = 1\n",
+    "    aux2 = 1\n",
+    "\n",
+    "    while aux1 != '0':\n",
+    "        aux1 = input('Digite os elementos da lista1, caso finalizado digite 0: ')\n",
+    "        lista1.append(aux1)\n",
+    "        \n",
+    "    lista1.pop()\n",
+    "\n",
+    "    while aux2 != '0':\n",
+    "        aux2 = input('Digite os elementos da lista2, caso finalizado digite 0: ')\n",
+    "        lista2.append(aux2)\n",
+    "    lista2.pop()\n",
+    "\n",
+    "    tamanhoLista1 = len(lista1)\n",
+    "    tamanhoLista2 = len(lista2)\n",
+    "\n",
+    "    for i in range(tamanhoLista1):\n",
+    "        lista1[i]\n",
+    "        for j in range(tamanhoLista2):\n",
+    "            if lista1[i] == lista2[j]:\n",
+    "                return i\n",
+    "                break\n",
+    "\n",
+    "listaInput1 = []\n",
+    "listaInput2 = []\n",
+    "print(\"Indice do primeiro valor igual:\", indice_prim_valor_igual(listaInput1, listaInput2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ec4f6c",
+   "id": "fcc4bad9",
    "metadata": {},
    "outputs": [],
    "source": []
